[package]
name = "rvp"
version = "0.1.0"
authors = ["Mike English <mike.english@gmail.com>"]
description = "Rust Video Player"
repository = "https://github.com/englishm/rvp"
keywords = ["video"]
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
